tests/API/Positive/TC-API-LGN-01.robot
*** Settings ***
Resource    ../../../resources/keywords/api_keywords.robot

*** Test Cases ***
TC-API-LGN-01
    [Documentation]  test case is to verify the login
    Login User